--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@arcjet/next": "^1.0.0-beta.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@google/generative-ai": "^0.24.0",
+    "@google/genai": "^1.33.0",
     "@hcorta/react-to-image": "^1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.483.0",
     "next": "15.1.11",
     "next-themes": "^0.4.6",
